cluster/kasten/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k10
  namespace: kasten-io
  annotations:
    kubernetes.io/ingress.class: internal
spec:
  rules:
    - host: k10.sko.ai
      http:
        paths:
          - backend:
              service:
                name: gateway
                port:
                  name: http
            path: /
            pathType: Prefix
